apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__lists__render_list_collection_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/lists.rs
expression: out
---
Lorvex Lists
DB: /tmp/lorvex.db
  ↳ No lists yet — create one with `lorvex list create "<name>"`.
