apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__lists__render_list_collection_text_multiple.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Lists
DB: /tmp/lorvex.db
  - list-work: Work (open: 3, total: 5)
  - list-home: Home (open: 0, total: 2)
